src/core/config/transformer/snapshots/tailcall__core__config__transformer__type_merger__test__cyclic_merge_case.snap
---
source: src/core/config/transformer/type_merger.rs
expression: config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type M1 {
  body: String
  id: Int
  t1: M1
  title: Boolean
  userId: Float
}

type Query {
  q1: M1
  q2: M1
}
